[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sahayak-ai"
version = "0.1.0"
description = "Autonomous RL Navigation System for Meta OpenEnv"
dependencies = [
    "fastapi",
    "uvicorn",
    "gymnasium",
    "numpy",
    "openai",
    "requests"
]