[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sahayak-ai"
version = "0.1.0"
description = "Autonomous RL Navigation System"
dependencies = [
    "fastapi",
    "uvicorn",
    "gymnasium",
    "numpy<2.0.0",
    "openai",
    "requests",
    "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"